# ocaml-irc-client

./: .gitignore  .merlin  .ocamlinit  .travis-ci.sh  .travis.yml  ChangeLog  Irc_client.CLIENT.Io.html  Irc_client.CLIENT.html  Irc_client.Make.html  Irc_client.html  Irc_helpers.html  Irc_message.html  Irc_transport.IO.html  Irc_transport.html  Makefile  README.md  _oasis  _tags  html.stamp  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  irc-client-lwt-ssl.opam  irc-client-lwt.opam  irc-client-tls.opam  irc-client-unix.opam  irc-client.obuild  irc-client.opam  myocamlbuild.ml  opam  run_example.sh  setup.ml  (+8 more)
.github/workflows/: workflow.yml
doc/: api.odocl
examples/: dune  example1.ml  example2.ml  example2_unix.ml  example3.ml  example_lwt_ssl.ml  example_tls.ml  jbuild
lib/: META  irc_client.ml  irc_client.mli  irc_client.mllib  irc_helpers.ml  irc_helpers.mli  irc_message.ml  irc_message.mli  irc_result.ml  irc_result.mli  irc_transport.ml  irc_transport.mli
lwt/: irc_client_lwt.ml  irc_client_lwt.mli  irc_client_lwt.mllib
lwt_ssl/: irc_client_lwt_ssl.ml  irc_client_lwt_ssl.mli
src/core/: dune  irc_client.ml  irc_client.mli  irc_helpers.ml  irc_helpers.mli  irc_message.ml  irc_message.mli  irc_transport.ml  irc_transport.mli  jbuild
src/lwt/: dune  irc_client_lwt.ml  irc_client_lwt.mli  jbuild
src/lwt_ssl/: dune  irc_client_lwt_ssl.ml  irc_client_lwt_ssl.mli
src/tls/: dune  irc_client_tls.ml  irc_client_tls.mli  jbuild
src/unix/: dune  irc_client_unix.ml  irc_client_unix.mli  jbuild
test/: dune  jbuild  test_helpers.ml  test_main.ml  test_message.ml  test_parser.ml  test_unit_main.ml
tls/: irc_client_tls.ml  irc_client_tls.mli
unix/: irc_client_unix.ml  irc_client_unix.mldylib  irc_client_unix.mli
