opam-version: "2.0"
authors: ["Simon Cruanes"]
homepage: "https://github.com/johnelse/ocaml-irc-client"
bug-reports: "https://github.com/johnelse/ocaml-irc-client/issues"
dev-repo: "git://github.com/johnelse/ocaml-irc-client"
maintainer: "john.else@gmail.com"
synopsis: "IRC client library, supporting Lwt and Unix blocking IO"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" {>= "1.6"}
  "irc-client"
  "lwt"
  "lwt_ssl"
  "odoc" {with-doc}
  "ocaml" { >= "4.02.0" }
  "ssl" { >= "0.5.8" }
]
