opam-version: "1.2"
authors: ["John Else" "Simon Cruanes"]
homepage: "https://github.com/johnelse/ocaml-irc-client"
bug-reports: "https://github.com/johnelse/ocaml-irc-client/issues"
dev-repo: "git://github.com/johnelse/ocaml-irc-client"
maintainer: "john.else@gmail.com"
build: [
  ["dune" "build" "@install" "-p" name]
]
build-doc: [
  ["dune" "build" "@doc" "-p" name]
]
build-test: [
  ["dune" "runtest" "-p" name]
]
depends: [
  "dune" {build}
  "base-unix"
  "irc-client"
]
available: [
  ocaml-version >= "4.02.0"
]
