(executable
  (name example1)
  (modules Example1)
  (libraries irc-client-lwt lwt.unix))

(executable
  (name example2)
  (modules Example2)
  (libraries irc-client-lwt lwt.unix))

(executable
  (name example2_unix)
  (modules Example2_unix)
  (libraries irc-client-unix))

(executable
  (name example_tls)
  (modules Example_tls)
  (libraries irc-client-tls))

(executable
  (name example_lwt_ssl)
  (modules Example_lwt_ssl)
  (libraries irc-client-lwt-ssl))
